# mcp_legacy_analysis

./: .gitignore  README.md  analysis.py  cobol_analysis.py  data_structure.py  database.py  flow_analysis.py  graph_db copy.py  graph_db.py  languages_config.json  legacy_analysis_server.py  main.py  mcp_client.py  pyproject.toml  sampling.py  tools_to_be_removed.py
.cursor/: mcp.json
data/: dogemain.json  kicks.json
documents/: Ollama docker installation.md  Usefull Commands.md  examples.md  mcp-architecture.md  mcp_server_settings.md  project_structure.md
graph/: graph_query.py  graph_upsert.py  graph_upsert_archimate.py
helpers/: graph_flow_processor.py  response_helper.py
prompts/: code_analysis_prompt.py  code_analyzer_prompt_generator.py
templates/: analyze_cobol_map.py  classify_document_template.py  classify_file_template.py  cobol_context_prompt.py  code_analyzer_prompt_generator.py  extract_clist_template.py  extract_cobol_template.py  extract_edges.py  extract_python_template.py  prompt_templates.py
tests/: convert_complex_llm_steps_to_flow_test.py  convert_llm_steps_to_flow_test.py  process_flow_response.py
to_be_removed/: analysis.py  data_structure.py  extract_clist_template.py  extract_cobol_template.py  extract_document_flow.py  extract_edges.py  extract_python_template.py  flow_analysis.py  graph_flow_upsert.py  local_llm.py  mcp_analysis_data.db  prompt_templates.py
tools/: __init__.py  classify_repository.py  document.py  extract_document_flow.py  extract_edges.py  fetch_repository.py  repository.py  workspace.py
utils/: logger.py  (+1 more)
